# vid_viz

./: .gitignore  firebase.json  l10n.yaml  log.text  pubspec.yaml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
assets/native/android/: splash.glsl
assets/native/android/effects/: dunes.glsl  (+13 more)
assets/native/ios/: splash.metal
assets/shaders/: splash.frag
assets/shaders/effects/: circle_radius.frag  dunes.frag  fishe.frag  half_tone.frag  heat_vision.frag  rain.frag  rain_glass.frag  snow.frag  spectrum.frag  sphere.frag  tiles.frag  water.frag  water2d.frag  wave_water.frag
assets/shaders/filters/: blur.frag  chrom_aberration.frag  crt.frag  edge_detect.frag  film_grain.frag  fisheye.frag  hd_boost.frag  pixelate.frag  posterize.frag  sharpen.frag  swirl.frag  vignette.frag  zoom_blur.frag
assets/shaders/text/: chrome_bevel.frag  duotone_map.frag  glitch_fill.frag  gradient_fill.frag  holo_scan.frag  liquid_distort.frag  metallic_fill.frag  neon_glow.frag  noise_flow.frag  rainbow_fill.frag  rgb_shift.frag  scanlines.frag  sparkle_glint.frag  wave_fill.frag
assets/shaders/visual/: acid.frag  acidic.frag  amv.frag  chromatic.frag  fluid.frag  heart.frag  laser.frag  loli_tun.frag  lridescent.frag  now_nation.frag  penrose.frag  plasma_wave.frag  pro_nation.frag  procedural.frag  signal.frag  sinusoid.frag  starfield.frag  sun_water.frag
assets/shaders/visualizer/: bar.frag  bar_circle.frag  bar_colors.frag  bar_normal.frag  circle.frag  claude.frag  curves.frag  line.frag  nation.frag  particle.frag  progress.frag  sinus.frag  smooth.frag  wav.frag  wave.frag
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart  service_locator.dart  testwrapper.dart
lib/core/: aspect_ratio.dart  config.dart  constants.dart  constants.dart~  params.dart  theme.dart
lib/dao/: project_dao.dart
lib/functions/: add_function.dart  asset_function.dart  edit_function.dart  export_function.dart  history_function.dart  playback_function.dart  project_function.dart  save_function.dart  set_function.dart  thumbnail_function.dart  timeline_function.dart
lib/l10n/: app_ar.arb  app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_hi.arb  app_ja.arb  app_ko.arb  app_pt.arb  app_ru.arb  app_tr.arb  app_zh.arb
lib/model/: app_settings.dart  audio_reactive.dart  generated.dart  layer.dart  media_overlay.dart  project.dart  shader_effect.dart  text_asset.dart  video_settings.dart  visualizer.dart
lib/service/: ad_service.dart  audio_analysis_service.dart  audio_reactive_service.dart  director_service.dart  generated_service.dart  layer_player.dart  media_overlay_service.dart  media_probe.dart  pro_service.dart  project_service.dart  settings_service.dart  shader_effect_service.dart  visualizer_service.dart
lib/service/archive/: archive_io.dart  archive_reader.dart  archive_writer.dart  project_archive_service.dart  schema.dart
lib/service/export/: native_audio_picker.dart  native_audio_postprocess.dart  native_export.dart  native_fft_builder.dart  native_generator.dart  native_overlay_preprocess.dart  native_pipeline.dart  native_progress.dart  native_shader_builder.dart  native_shader_loader.dart  native_text_preprocess.dart  native_ui_context.dart  native_visualizer_staging.dart
lib/ui/common/: animated_dialog.dart
lib/ui/screens/: director.dart  feed_back.dart  pro_subscription_screen.dart  project_edit.dart  project_list.dart  settings_screen.dart  splash_screen.dart
lib/ui/widgets/: action_button.dart  audio_mixer_sheet.dart  color_editor.dart  custom_slider.dart  drag_closest.dart  editor_action.dart  editor_header.dart  editor_main.dart  svg_icon.dart  video_footer.dart
vidviz_engine/: README.md  pubspec.yaml
vidviz_engine/android/: build.gradle  build.gradle.snippet  settings.gradle
vidviz_engine/android/src/main/cpp/: CMakeLists.txt
vidviz_engine/ios/: vidviz_engine.podspec
vidviz_engine/ios/Classes/: VidvizEnginePlugin.h  VidvizEnginePlugin.m  vidviz_engine_sources.mm
vidviz_engine/lib/: vidviz_engine.dart
vidviz_engine/lib/src/: engine_client.dart  engine_ffi.dart
vidviz_engine/native/: CMakeLists.txt
vidviz_engine/native/common/: dart_api_dl.h  log.cpp  log.h  media_overlay.h  minijson.cpp  minijson.h  render_math.h  types.h
vidviz_engine/native/core/: engine.cpp  engine.h
vidviz_engine/native/core/effects/: effect.h  shader_manager.cpp  shader_manager.h
vidviz_engine/native/core/parser/: job_parser.cpp  job_parser.h
vidviz_engine/native/core/timeline/: timeline.cpp  timeline.h
vidviz_engine/native/platform/: encoder_interface.h  renderer_interface.h
vidviz_engine/native/platform/android/: android_bridge.cpp  gl_external_oes_renderer.cpp  gl_external_oes_renderer.h  gl_framebuffer.cpp  gl_framebuffer.h  gl_quad_renderer.cpp  gl_quad_renderer.h  gles_surface_renderer.cpp  gles_surface_renderer.h  mediacodec_encoder.cpp  mediacodec_encoder.h  mediacodec_remuxer.cpp  mediacodec_remuxer.h  mediacodec_utils.cpp  mediacodec_utils.h  ndk_video_decoder.cpp  ndk_video_decoder.h  ndk_video_decoder_gpu.cpp  ndk_video_decoder_gpu.h  vulkan_renderer.cpp  vulkan_renderer.h
vidviz_engine/native/platform/android/renderer/gles/: overlay_renderer.cpp  overlay_renderer.h  shader_source_utils.cpp  shader_source_utils.h  text_rasterizer.cpp  text_rasterizer.h  visualizer_renderer.cpp  visualizer_renderer.h
vidviz_engine/native/platform/ios/: avfoundation_encoder.h  avfoundation_encoder.mm  ios_bridge.mm  ios_encoder_surface.h  metal_export_session.h  metal_export_session.mm  metal_renderer.h  metal_renderer.mm
vidviz_engine/native/platform/ios/text/: text_anim_ios.h  text_anim_ios.mm  text_params.h  text_parser_ios.h  text_parser_ios.mm  text_rasterizer_ios.h  text_rasterizer_ios.mm  text_renderer_ios.h  text_renderer_ios.mm  text_renderer_ios_effect.mm  text_renderer_ios_internal.h  text_renderer_ios_pipelines.mm  text_renderer_ios_render.mm
vidviz_engine/tools/: build_shaders.py
(+204 files in other folders)
